--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="TurnAtRate",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="TurnAtRate",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="TurnAtRate",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
