Added ShooterAnimInstance class which serves as base class for the Animation Blueprint + added character mesh

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ Saved
 *.suo
 *.xcodeproj
 *.xcworkspace
+Content/ParagonDrongo
+Content/ParagonKwang
+Content/ParagonLtBelica
+Content/ParagonTwinBlast
