Replaced character with another one

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ Content/ParagonDrongo
 Content/ParagonKwang
 Content/ParagonLtBelica
 Content/ParagonTwinBlast
+Content/ParagonWraith
 Content/MilitaryWeapSilver
