--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Content/ParagonKwang
 Content/ParagonLtBelica
 Content/ParagonTwinBlast
 Content/ParagonWraith
+Content/ParagonYin
 Content/MilitaryWeapSilver
 Content/AnimStarterPack
 Content/_Game/Assets/Fonts
