--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/BadassShooter")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="BadassShooterGameModeBase")
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
