Commit of main to merge ammopickups

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ Content/ParagonWraith
 Content/ParagonYin
 Content/MilitaryWeapSilver
 Content/AnimStarterPack
+Content/FPS_Weapon_Bundle
 Content/_Game/Assets/Fonts
