--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ Content/AnimStarterPack
 Content/FPS_Weapon_Bundle
 Content/_Game/Assets/Fonts
 Content/FPS_Weapon_Bundle
+Content/A_Surface_Footstep
+Content/KiteDemo
+Content/Lighting
+Content/ParagonProps
+Content/SampleMap
